Added functionality to descrypt connection string

--- a/YoutubeChannelAPI/YoutubeChannelAPI/YoutubeChannelAPI.csproj
+++ b/YoutubeChannelAPI/YoutubeChannelAPI/YoutubeChannelAPI.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EncryptorDecryptor\EncryptorDecryptor.csproj" />
     <ProjectReference Include="..\YoutubeChannel.DataAccess\YoutubeChannel.DataAccess.csproj" />
   </ItemGroup>
 
