Implemented Video Controller and its repo

--- a/YoutubeChannelAPI/YoutubeChannelAPI/YoutubeChannelAPI.csproj
+++ b/YoutubeChannelAPI/YoutubeChannelAPI/YoutubeChannelAPI.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EncryptorDecryptor\EncryptorDecryptor.csproj" />
-    <ProjectReference Include="..\YoutubeChannel.DataAccess\YoutubeChannel.DataAccess.csproj" />
+    <ProjectReference Include="..\YoutubeChannel.DataAccess\YoutubeChannelAPI.DataAccess.csproj" />
   </ItemGroup>
 
 
